solved mobile view issue on small devices on contact info

--- a/src/app/main-content/contacts/contacts.component.scss
+++ b/src/app/main-content/contacts/contacts.component.scss
@@ -337,3 +337,13 @@
         display: flex !important;
     }
 }
+
+@media screen and (max-height: 800px) {
+    .contact-infos {
+        padding: 20px!important;
+    }
+
+    .close-info-btn{
+        top: 40px;
+    }
+}
